# where_to_live

./: .env.example  .gitignore  README.md  api.py  app.py  config.py  main.py  patch_south_fmr.py  plan.md  pyproject.toml  run_pipeline.py
.claude/: launch.json
data/processed/: north_amenities.parquet  south_amenities.parquet
pipeline/: 01_geo_filter.py  02_airport_proximity.py  03_walkscore.py  04_osm_amenities.py  05_score_and_rank.py  06_visualize.py  log.py
